# Majin

./: .gitignore  CMakeLists.txt  README.md  compile_run.bat  compile_shaders.bat
app/: main.cpp
engine/: first_app.cpp  first_app.hpp  majin_device.cpp  majin_device.hpp  majin_game_object.hpp  majin_model.cpp  majin_model.hpp  majin_pipeline.cpp  majin_pipeline.hpp  majin_swap_chain.cpp  majin_swap_chain.hpp  majin_window.cpp  majin_window.hpp
shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
